// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSteps renders step title inside "headingElement" element 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          1
        </span>
      </span>
      <h2
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        first title
      </h2>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          2
        </span>
      </span>
      <h2
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        second title
      </h2>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s-incomplete"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          3
        </span>
      </span>
      <h2
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        third title
      </h2>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          1
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          2
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s-incomplete"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          3
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps with firstStepNumber 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 10
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          10
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 11
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          11
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep emotion-euiStep-s"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-s-incomplete"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 12 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          12
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-s-euiStep__title-s"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-m"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps with titleSize 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiStep emotion-euiStep-xs"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-xs"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 1
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          1
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-xs-euiStep__title-xs"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-xs"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep emotion-euiStep-xs"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-xs"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 2
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          2
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-xs-euiStep__title-xs"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-xs"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep emotion-euiStep-xs"
  >
    <div
      class="euiStep__titleWrapper emotion-euiStep__titleWrapper"
    >
      <span
        class="euiStepNumber emotion-euiStepNumber-xs-incomplete"
      >
        <span
          class="emotion-euiScreenReaderOnly"
        >
          Step 3 is incomplete
        </span>
        <span
          aria-hidden="true"
          class="euiStepNumber__number"
        >
          3
        </span>
      </span>
      <p
        class="euiTitle euiStep__title emotion-euiTitle-xs-euiStep__title-xs"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content emotion-euiStep__content-xs"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;
